@@ -35,6 +35,8 @@ version 1.9.12, in progress
   various small updates
 - Environment: respect GRETL_CONFIG_FILE to override the
   default of ~/.gretl2rc on unix-type systems
+- Daily dates: switch to ISO 8601 for output and preferred
+  input (but accept YYYY/MM/DD for backward compatibility)
 
 2012-11-21 version 1.9.11
 - Substantial re-write of code for handling named variables
